# flutter-wireguard

./: .gitmodules  .metadata  .pubignore  LICENSE  README.md  pubspec.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  lint_test_and_build.yml  publish.yml
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/aidl/com/pedramktb/flutter_wireguard/: IWireguard.aidl  IWireguardCallback.aidl
android/src/main/aidl/dev/fluttercommunity/flutter_wireguard/: IWireguard.aidl  IWireguardCallback.aidl
android/src/main/kotlin/com/example/flutter_wireguard/: FlutterWireguardPlugin.kt
android/src/main/kotlin/com/pedramktb/flutter_wireguard/: FlutterWireguardPlugin.kt  Messages.g.kt  Wireguard.kt  WireguardService.kt
android/src/main/kotlin/dev/fluttercommunity/flutter_wireguard/: FlutterWireguardPlugin.kt  Wireguard.kt  WireguardService.kt
android/src/test/kotlin/com/example/flutter_wireguard/: FlutterWireguardPluginTest.kt
android/src/test/kotlin/com/pedramktb/flutter_wireguard/: StatusJsonTest.kt
cpp/: ipc_protocol.h  name_validator.h
darwin/: flutter_wireguard.podspec
darwin/Classes/: FlutterWireguardPlugin.swift
doc/: PORTING.md  WINDOWS_SETUP.md
example/: .gitignore  .metadata  README.md  pubspec.yaml
example/android/app/: build.gradle  build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_wireguard_example/: MainActivity.kt
example/android/app/src/main/kotlin/com/pedramktb/flutter_wireguard_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart  plugin_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_wireguard.podspec
ios/Classes/: FlutterWireguardPlugin.swift
lib/: flutter_wireguard.dart  flutter_wireguard_method_channel.dart  flutter_wireguard_platform_interface.dart
lib/src/: keys.dart  messages.g.dart
linux/: CMakeLists.txt  flutter_wireguard_plugin.cc  flutter_wireguard_plugin_private.h  messages.g.cc  messages.g.h  privileged_session.cc  privileged_session.h  process_runner.cc  process_runner.h  wg_backend.cc  wg_backend.h
linux/test/: flutter_wireguard_plugin_test.cc  process_runner_test.cc  wg_backend_test.cc
pigeons/: messages.dart
test/: flutter_wireguard_method_channel_test.dart  flutter_wireguard_test.dart  keys_test.dart
windows/: CMakeLists.txt  LICENSE  broker_client.cpp  broker_client.h  config_writer.cpp  config_writer.h  flutter_wireguard_plugin.cpp  flutter_wireguard_plugin.h  flutter_wireguard_plugin_c_api.cpp  messages.g.cpp  messages.g.h  service_control.cpp  service_control.h  utils.cpp  utils.h
windows/helper/: broker.cpp  broker.h  config_writer.cpp  config_writer.h  main.cpp  pipe_security.cpp  pipe_security.h  tunnel_manager.cpp  tunnel_manager.h  tunnel_service.cpp  tunnel_service.h  wireguard_dll.cpp  wireguard_dll.h
windows/lib/: VERSIONS.md
windows/lib/tunnel/include/: tunnel.h
windows/lib/wireguard/include/: wireguard.h
windows/test/: flutter_wireguard_plugin_test.cpp  ipc_protocol_test.cpp  name_validation_test.cpp
